# directors-cut

./: .gitignore  ARCHITECTURE.md  DEMO.md  E2E_CLINICAL_RADAR.md  EXPLANATION.md  README.md  VIDEO_SCRIPT.md  implementation_plan.md
src/: FRONTEND_TROUBLESHOOTING.md  QUICKSTART.md  README.md  start.sh
src/backend/: README.md  README_POETRY.md  clinical_radar_service.py  ct_service.py  database.py  ingestion.py  llm_service.py  main.py  matching_engine.py  models.py  pyproject.toml  requirements.txt  seed_data.py  transcription_service.py  trialsense.db
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  index.css  main.tsx  types.ts
src/frontend/src/components/: ChartPeekMode.tsx  ClinicalRadarMode.tsx  EditPatientModal.tsx  ListenerMode.tsx  SavePatientModal.tsx  ScreenerMode.tsx  TrialCard.tsx  TrialDetailsModal.tsx
